# cannes-2026-events-mcp

./: .gitignore  README.md  enrich.py  geocode_events.py  modal_app.py  pyproject.toml  server.py
docs/superpowers/plans/: 2026-06-04-cannes-mcp-data-layer-v2.md  2026-06-12-location-directions-tools.md
docs/superpowers/specs/: 2026-06-04-cannes-mcp-data-layer-v2-design.md  2026-06-12-location-directions-tools-design.md
enrich/: __init__.py  classifier.py  crawler.py  matcher.py  parser.py  sheets_reader.py  writer.py
tests/: test_classifier.py  test_matcher.py  test_parser.py
