[project]
name = "cannes-lions-mcp"
version = "0.1.0"
description = "MCP server for querying Cannes Lions 2026 event schedules and registration links"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cannes-lions-mcp = "server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
