[project]
name = "cannes-lions-mcp"
version = "0.2.0"
description = "MCP server for querying Cannes Lions 2026 event schedules and registration links"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.49.0",
    "thefuzz[speedup]>=0.22.0",
    "google-api-python-client>=2.0.0",
]

[project.scripts]
cannes-lions-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
